Fix tool wrapping
Fixes #115
Fixed #117

--- a/packages/inspect-components/src/chat/tools/ToolTitle.module.css
+++ b/packages/inspect-components/src/chat/tools/ToolTitle.module.css
@@ -5,6 +5,7 @@
 
 .toolTitle {
   color: unset !important;
+  overflow-wrap: anywhere;
 }
 
 .description {
